--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					marker.setMap(map);
 					var rectangulo = new google.maps.Rectangle();
 					rectangulo.setBounds(imageBounds);
-					var oldmap = new google.maps.GroundOverlay("images/mapa2.png", imageBounds);
+					var oldmap = new google.maps.GroundOverlay("images/mapa.png", imageBounds);
 					oldmap.setMap(map);
 					var limites = rectangulo.getBounds().contains(pos);
 						if(limites){
